Authentication in progress

--- a/EasyBank/Views/Shared/_Layout.cshtml
+++ b/EasyBank/Views/Shared/_Layout.cshtml
@@ -62,15 +62,28 @@
                     <p class="site-title">@Html.ActionLink("Easy Bank", "Index", "Home")</p>
                 </div>
                 <div class="float-right">
-                    @*<section id="login">
+                    <section id="login">
                         @Html.Partial("_LoginPartial")
-                    </section>*@
+                    </section>
                     <nav>
                         <ul id="menu">
                             <li>@Html.ActionLink(Resources.Resource.Home, "Index", "Home")</li>
+                           @* @if (User.IsInRole("Operator"))
+                            {
                             <li>@Html.ActionLink(Resources.Resource.ClientsList, "ClientsList", "Protected")</li>
+                            }   *@                        
+                                @* @if (User.IsInRole("Client"))
+                            {
                             <li>@Html.ActionLink(Resources.Resource.Currencies, "CurrencyList", "Protected")</li>
-                         @* <li>@Html.ActionLink("PreRegister","PreRegister","Account")</li>*@
+                            }*@
+                            
+                            @if (User.IsInRole("Administrator"))
+                            {
+                                <li>@Html.ActionLink("Register Operator","RegisterOperator", "Account")</li>
+                            }
+                                    
+
+                           @*<li>@Html.ActionLink("RegisterAdmin","RegisterAdmin","Account")</li>*@
                         </ul>
                     </nav>
                 </div>
