Updated Operators List

--- a/EasyBank/Views/Protected/OperatorsList.cshtml
+++ b/EasyBank/Views/Protected/OperatorsList.cshtml
@@ -32,16 +32,16 @@ else
             <tr>
                 <th>
 
-                    @Html.ActionLink(@Resources.Resource.Name, "ClientsList", new { sort = ViewBag.NameSort, currentFilter = ViewBag.CurrentFilter })
+                    @Html.ActionLink(@Resources.Resource.Name, "OperatorsList", new { sort = ViewBag.NameSort, currentFilter = ViewBag.CurrentFilter })
                 </th>
                 <th>
-                    @Html.ActionLink(@Resources.Resource.Surname, "ClientsList", new { sort = ViewBag.SurnameSort, currentFilter = ViewBag.CurrentFilter })
+                    @Html.ActionLink(@Resources.Resource.Surname, "OperatorsList", new { sort = ViewBag.SurnameSort, currentFilter = ViewBag.CurrentFilter })
                 </th>
                 <th>
-                    @Html.ActionLink(@Resources.Resource.Email, "ClientsList", new { sort = ViewBag.EmailSort, currentFilter = ViewBag.CurrentFilter })
+                    @Html.ActionLink(@Resources.Resource.Email, "OperatorsList", new { sort = ViewBag.EmailSort, currentFilter = ViewBag.CurrentFilter })
                 </th>
                 <th>
-                    @Html.ActionLink(@Resources.Resource.RegDate, "ClientsList", new { sort = ViewBag.RegistrationDateSort, currentFilter = ViewBag.CurrentFilter })
+                    @Html.ActionLink(@Resources.Resource.RegDate, "OperatorsList", new { sort = ViewBag.RegistrationDateSort, currentFilter = ViewBag.CurrentFilter })
                 </th> 
 
                 <th></th>
