--- a/EasyBank/Views/Protected/ClientsProfile.cshtml
+++ b/EasyBank/Views/Protected/ClientsProfile.cshtml
@@ -127,6 +127,7 @@
             </td>
             <td>
                 @Html.ActionLink(@Resources.Resource.AddMoney, "AddMoney", "Operation", new { accountId = item.AccountId }, null) |
+                @Html.ActionLink(@Resources.Resource.AddMoney, "WithdrawMoney", "Operation", new { accountId = item.AccountId }, null) |
                 @Html.ActionLink(@Resources.Resource.TransMoney, "TransferMoney", new { id = item.AccountId }) |
             </td>
         </tr>
