--- a/EasyBank/Views/Account/Login.cshtml
+++ b/EasyBank/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EasyBank.Models.LoginModel
 
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = "Log in for clients";
 }
 
 <hgroup class="title">
@@ -32,6 +32,8 @@
                 @Html.LabelFor(m => m.RememberMe, new { @class = "checkbox" })
             </li>
         </ol>
+        @ViewBag.Message
+        <br />
         <input type="submit" value="Log in" />
     </fieldset>
 }
