--- a/EasyBank/Views/Operation/WidthdrawMoney.cshtml
+++ b/EasyBank/Views/Operation/WidthdrawMoney.cshtml
@@ -4,70 +4,76 @@
     <legend>Account</legend>
 
     <div class="display-label">
-        <b> @Html.DisplayNameFor(model => model.AccountNumber)</b>
+         @Html.DisplayNameFor(model => model.AccountNumber)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.AccountNumber)
     </div>
 
     <div class="display-label">
-        <b>@Html.DisplayNameFor(model => model.ExpirationDate)</b>
+         @Html.DisplayNameFor(model => model.ExpirationDate)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.ExpirationDate)
     </div>
 
     <div class="display-label">
-        <b>@Html.DisplayNameFor(model => model.Amount)</b>
+         @Html.DisplayNameFor(model => model.Amount)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Amount)
     </div>
 
     <div class="display-label">
-        <b>@Html.DisplayNameFor(model => model.AvailableAmount)</b>
+         @Html.DisplayNameFor(model => model.AvailableAmount)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.AvailableAmount)
     </div>
 
     <div class="display-label">
-        <b>@Html.DisplayNameFor(model => model.ClientId)</b>
+         @Html.DisplayNameFor(model => model.ClientId)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Client.Name)
     </div>
 
     <div class="display-label">
-        <b>@Html.DisplayNameFor(model => model.TypeId)</b>
+         @Html.DisplayNameFor(model => model.TypeId)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.AccountType.TypeName)
     </div>
 
     <div class="display-label">
-        <b>@Html.DisplayNameFor(model => model.CurrencyId)</b>
+         @Html.DisplayNameFor(model => model.CurrencyId)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Currency.CurrencyName)
     </div>
 
     <div class="display-label">
-        <b>@Html.DisplayNameFor(model => model.StatusId)</b>
+         @Html.DisplayNameFor(model => model.StatusId)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.AccountStatus.StatusName)
     </div>
 </fieldset>
 
-<p><b>Add Funds</b></p>
-@using (Html.BeginForm("AddMoney", "Operation", FormMethod.Post))
+<h4><b>Widthdraw Funds</b></h4>
+@if (Model.AccountType.TypeName != "Credit")
 {
-    Model.Amount = 0;
-    @Html.HiddenFor(model => model.ClientId)
-    @Html.EditorFor(model => model.Amount)
-    @Html.ValidationMessageFor(model => model.Amount)
-    <input type="submit" value="submit" />
+    using (Html.BeginForm("AddMoney", "Operation", FormMethod.Post))
+    {
+        @Html.HiddenFor(model => model.ClientId)
+        @Html.EditorFor(model => model.Amount)
+        @Html.ValidationMessageFor(model => model.Amount)
+        <input type="submit" value="submit" />
+    }
+}
+else
+{
+    <h6>Can't take money from credit account</h6>
 }
 
 <p>
