--- a/EasyBank/Views/Office/AddDepositCredit.cshtml
+++ b/EasyBank/Views/Office/AddDepositCredit.cshtml
@@ -8,14 +8,27 @@
     <fieldset>
         <legend>Create new bank product</legend>
         
-
         <div class=" editor-label">
+            @Html.LabelFor(model => model.AccountType)
+        </div>
+        @{
+    List<SelectListItem> listType = new List<SelectListItem>();
+    var ListTypes = ViewBag.Types;
+    foreach (var item in ListTypes)
+    {
+        listType.Add(new SelectListItem() { Text = item.TypeName, Value = item.TypeId.ToString() });
+    }
+        }
+        @Html.DropDownListFor(model => model.AccountTypeId, listType)
+
+
+      @*  <div class=" editor-label">
             @Html.LabelFor(model => model.AccountType)
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.AccountType)
             @Html.ValidationMessageFor(model => model.AccountType)
-        </div>
+        </div> *@
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Name)
