--- a/EasyBank/Views/Operation/WidthdrawMoney.cshtml
+++ b/EasyBank/Views/Operation/WidthdrawMoney.cshtml
@@ -4,56 +4,56 @@
     <legend>Account</legend>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.AccountNumber)
+        @Html.DisplayNameFor(model => model.AccountNumber)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.AccountNumber)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.ExpirationDate)
+        @Html.DisplayNameFor(model => model.ExpirationDate)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.ExpirationDate)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Amount)
+        @Html.DisplayNameFor(model => model.Amount)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Amount)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.AvailableAmount)
+        @Html.DisplayNameFor(model => model.AvailableAmount)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.AvailableAmount)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.ClientId)
+        @Html.DisplayNameFor(model => model.ClientId)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Client.Name)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.TypeId)
+        @Html.DisplayNameFor(model => model.TypeId)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.AccountType.TypeName)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.CurrencyId)
+        @Html.DisplayNameFor(model => model.CurrencyId)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Currency.CurrencyName)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.StatusId)
+        @Html.DisplayNameFor(model => model.StatusId)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.AccountStatus.StatusName)
@@ -63,9 +63,10 @@
 <h4><b>Widthdraw Funds</b></h4>
 @if (Model.AccountType.TypeName != "Credit")
 {
-    using (Html.BeginForm("AddMoney", "Operation", FormMethod.Post))
+    using (Html.BeginForm("WidthdrawMoney", "Operation", FormMethod.Post))
     {
         @Html.HiddenFor(model => model.ClientId)
+        @Html.HiddenFor(model => model.AccountId)
         @Html.EditorFor(model => model.Amount)
         @Html.ValidationMessageFor(model => model.Amount)
         <input type="submit" value="submit" />
