--- a/EasyBank/Views/Operation/AddMoney.cshtml
+++ b/EasyBank/Views/Operation/AddMoney.cshtml
@@ -1,5 +1,9 @@
 ﻿@model EasyBank.Models.Account
 
+<script src="~/Scripts/jquery-1.8.2.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
 <fieldset>
     <legend>Account</legend>
 
@@ -63,11 +67,14 @@
 <p><b>Add Funds</b></p>
 @using (Html.BeginForm("AddMoney", "Operation", FormMethod.Post))
 {
+    @Html.ValidationSummary(true)
     Model.Amount = 0;
     @Html.HiddenFor(model => model.AccountId)
     @Html.HiddenFor(model => model.ClientId)
-    @Html.EditorFor(model => model.Amount)
-    @Html.ValidationMessageFor(model => model.Amount)
+    <div class="editor-field">
+        @Html.EditorFor(model => model.Amount)
+        @Html.ValidationMessageFor(model => model.Amount)
+    </div>
     <input type="submit" value="submit" />
 }
 
