--- a/EasyBank/Views/Operation/WidthdrawMoney.cshtml
+++ b/EasyBank/Views/Operation/WidthdrawMoney.cshtml
@@ -1,5 +1,9 @@
 ﻿@model EasyBank.Models.Account
 
+<script src="~/Scripts/jquery-1.8.2.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
 <fieldset>
     <legend>Account</legend>
 
@@ -69,6 +73,7 @@
         @Html.HiddenFor(model => model.AccountId)
         @Html.EditorFor(model => model.Amount)
         @Html.ValidationMessageFor(model => model.Amount)
+        <br />
         <input type="submit" value="submit" />
     }
 }
