--- a/EasyBank/Views/Protected/ClientsProfile.cshtml
+++ b/EasyBank/Views/Protected/ClientsProfile.cshtml
@@ -131,7 +131,7 @@
             <td>
                 @Html.ActionLink(@Resources.Resource.AddMoney, "AddMoney", "Operation", new { id = item.AccountId }, null) |
                 @Html.ActionLink(@Resources.Resource.WidthdrawMoney, "WidthdrawMoney", "Operation", new { id = item.AccountId }, null) |
-                @Html.ActionLink(@Resources.Resource.TransMoney, "TransferMoney", "Operation", new { id = item.AccountId }, null) |
+                @Html.ActionLink(@Resources.Resource.TransMoney, "TransferMoney", "Operation", new { id = item.AccountId }, null) 
             </td>
         </tr>
     }
