--- a/EasyBank/Views/Account/Register.cshtml
+++ b/EasyBank/Views/Account/Register.cshtml
@@ -37,7 +37,12 @@
 }
 *@
 
+
 @model EasyBank.Models.RegisterCompositeModel
+
+<script src="~/Scripts/jquery-1.8.2.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
@@ -50,43 +55,43 @@
         @ViewBag.Message
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Name)
+            @Html.LabelFor(model => model.Client.Name)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Name)
-            @Html.ValidationMessageFor(model => model.Name)
+            @Html.EditorFor(model => model.Client.Name)
+            @Html.ValidationMessageFor(model => model.Client.Name)
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Surname)
+            @Html.LabelFor(model => model.Client.Surname)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Surname)
-            @Html.ValidationMessageFor(model => model.Surname)
+            @Html.EditorFor(model => model.Client.Surname)
+            @Html.ValidationMessageFor(model => model.Client.Surname)
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.PIdNumber)
+            @Html.LabelFor(model => model.Client.PIdNumber)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.PIdNumber)
-            @Html.ValidationMessageFor(model => model.PIdNumber)
+            @Html.EditorFor(model => model.Client.PIdNumber)
+            @Html.ValidationMessageFor(model => model.Client.PIdNumber)
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.BirthDate)
+            @Html.LabelFor(model => model.Client.BirthDate)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.BirthDate)
-            @Html.ValidationMessageFor(model => model.BirthDate)
+            @Html.EditorFor(model => model.Client.BirthDate)
+            @Html.ValidationMessageFor(model => model.Client.BirthDate)
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Email)
+            @Html.LabelFor(model => model.Client.Email)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Email)
-            @Html.ValidationMessageFor(model => model.Email)
+            @Html.EditorFor(model => model.Client.Email)
+            @Html.ValidationMessageFor(model => model.Client.Email)
         </div>
         <div class="editor-label">
             @Html.LabelFor(model => model.Password)
@@ -104,7 +109,7 @@
         </div>
 
                 <label for=" file">@Resources.Resource.UploadPassportScan:</label>
-        <input type="file" name="file" id="file" style="width: 100%;" value="@Resources.Resource.ChooseFile" />
+        <input type="file" name="file" id="file" accept="image/jpeg,image/png" style="width: 100%;" value="@Resources.Resource.ChooseFile" />
 
         <p>
             <input type="submit" value="Create" class="submit" />
