fixed coma and date problems

--- a/EasyBank/Views/Operation/WidthdrawMoney.cshtml
+++ b/EasyBank/Views/Operation/WidthdrawMoney.cshtml
@@ -4,6 +4,20 @@
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
+<script type="text/javascript">
+    $.validator.methods.number = function (value, element) {
+        return !isNaN(parseFloat(value));
+    }
+    $.validator.methods.range = function (value, element, param) {
+        var globalizedValue = value.replace(",", ".");
+        return this.optional(element) || (globalizedValue >= param[0] && globalizedValue <= param[1]);
+    }
+    $(document).ready(function () {
+    });
+</script>
+
+
+
 <fieldset>
     <legend>Account</legend>
 
