--- a/EasyBank/Views/Operation/AddMoney.cshtml
+++ b/EasyBank/Views/Operation/AddMoney.cshtml
@@ -4,6 +4,18 @@
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
+<script type="text/javascript">
+    $.validator.methods.number = function (value, element) {
+        return !isNaN(parseFloat(value));
+    }
+    $.validator.methods.range = function (value, element, param) {
+        var globalizedValue = value.replace(",", ".");
+        return this.optional(element) || (globalizedValue >= param[0] && globalizedValue <= param[1]);
+    }
+    $(document).ready(function () {
+        });
+</script>
+
 <fieldset>
     <legend>Account</legend>
 
@@ -65,7 +77,7 @@
 </fieldset>
 
 <p><b>Add Funds</b></p>
-@using (Html.BeginForm("AddMoney", "Operation", FormMethod.Post))
+@using (Html.BeginForm("AddMoney", "Operation", FormMethod.Post, new{@Id = "submitForm"}))
 {
     @Html.ValidationSummary(true)
     Model.Amount = 0;
