--- a/EasyBank/Views/Operation/AddMoney.cshtml
+++ b/EasyBank/Views/Operation/AddMoney.cshtml
@@ -5,22 +5,26 @@
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
 <script type="text/javascript">
-    $.validator.methods.number = function (value, element) {
+    $.validator.methods.number = function(value, element) {
         return !isNaN(parseFloat(value));
-    }
-    $.validator.methods.range = function (value, element, param) {
+    };
+    $.validator.methods.range = function(value, element, param) {
         var globalizedValue = value.replace(",", ".");
         return this.optional(element) || (globalizedValue >= param[0] && globalizedValue <= param[1]);
-    }
+    };
     $(document).ready(function () {
+        $("#Amount").val($("#Amount").val().replace(',', '.'));
+        $("#Amount").keyup(function() {
+            $("#Amount").val( $("#Amount").val().replace(',','.') );
         });
+    });
 </script>
 
 <fieldset>
     <legend>Account</legend>
 
     <div class="display-label">
-        <b> @Html.DisplayNameFor(model => model.AccountNumber)</b>
+        <b>@Html.DisplayNameFor(model => model.AccountNumber)</b>
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.AccountNumber)
@@ -77,7 +81,7 @@
 </fieldset>
 
 <p><b>Add Funds</b></p>
-@using (Html.BeginForm("AddMoney", "Operation", FormMethod.Post, new{@Id = "submitForm"}))
+@using (Html.BeginForm("AddMoney", "Operation",  FormMethod.Post, new { @Id = "submitForm" }))
 {
     @Html.ValidationSummary(true)
     Model.Amount = 0;
@@ -86,8 +90,15 @@
     <div class="editor-field">
         @Html.EditorFor(model => model.Amount)
         @Html.ValidationMessageFor(model => model.Amount)
+        
+        @{
+            List<SelectListItem> itemList = ViewBag.itemList;
+        }
+            @Html.DropDownList("CurrencyName", itemList)
+        
     </div>
-    <input type="submit" value="submit" />
+    
+    <input type="submit" value="submit" onclick="return confirm('Are you sure that you want to add money?') ? true : false;"/>
 }
 
 <p>
