--- a/EasyBank/Views/Protected/ClientsProfile.cshtml
+++ b/EasyBank/Views/Protected/ClientsProfile.cshtml
@@ -3,6 +3,38 @@
 @{
     ViewBag.Title = "Clients profile";
 }
+<script>
+
+    $(document).ready(function () {
+        prevTriggeredTrId = "";
+        $("tr").click(function () {
+                
+                $(this).css("background-color", "white");
+                $("#" + prevTriggeredTrId.toString()).css("background-color", "#efeeef")
+                prevTriggeredTrId = this.id;
+                parms = this.id.split('-', 2);
+                $("#payInButton").attr("href", "/Operation/AddMoney/" + parms[0]);
+                $("#payOutButton").attr("href", "/Operation/WidthdrawMoney/" + parms[0]);
+                $("#transferButton").attr("href", "/Operation/TransferMoney/" + parms[0]);
+                if (parms[1] == "Credit") {
+                    $("#payInButton").css("opacity", 1);
+                    $("#payOutButton").css("opacity", 0);
+                    $("#transferButton").css("opacity", 0);
+                }
+                else if (parms[1] == "Deposit") {
+                    $("#payInButton").css("opacity", 1);
+                    $("#payOutButton").css("opacity", 1);
+                    $("#transferButton").css("opacity", 1);
+                }
+                else if (parms[1] == "Normal") {
+                    $("#payInButton").css("opacity", 1);
+                    $("#payOutButton").css("opacity", 1);
+                    $("#transferButton").css("opacity", 1);
+                }
+            
+        });
+    });
+</script>
 <h2>@Html.Label(@Resources.Resource.ClientsProfileTitle)</h2>
 <table>
     <tr>
@@ -77,7 +109,7 @@
 <p>
     @Html.ActionLink(@Resources.Resource.AddAccount, "AddAccount", new { clientId = Model.ClientId })
 </p>
- <div>
+<div>
     @Html.ActionLink("AddPhoto", "AddPhoto", new { id = Model.ClientId })
 </div>
 <table>
@@ -97,10 +129,11 @@
 
         @Resources.Resource.AccountsAreAbsent
     }
+
     @foreach (var item in Model.Accounts)
     {
-
-        <tr>
+        
+        <tr id="@item.AccountId-@item.AccountType.TypeName">
             <td>
                 <div class="display-field">
                     @Html.DisplayFor(modelItem => item.AccountNumber)
@@ -131,12 +164,16 @@
                     @Html.DisplayFor(modelItem => item.AccountStatus.StatusName)
                 </div>
             </td>
-            <td>
+            @*<td>
                 @Html.ActionLink(@Resources.Resource.AddMoney, "AddMoney", "Operation", new { id = item.AccountId }, null) |
                 @Html.ActionLink(@Resources.Resource.WidthdrawMoney, "WidthdrawMoney", "Operation", new { id = item.AccountId }, null) |
-                @Html.ActionLink(@Resources.Resource.TransMoney, "TransferMoney", "Operation", new { id = item.AccountId }, null) 
-            </td>
+                @Html.ActionLink(@Resources.Resource.TransMoney, "TransferMoney", "Operation", new { id = item.AccountId }, null)
+            </td>*@
         </tr>
+        
     }
 </table>
+<a href="#" id="payInButton" style="opacity: 0">Pay in</a>
+<a href="#" id="payOutButton" style="opacity: 0">Pay out</a>
+<a href="#" id="transferButton" style="opacity: 0">Transfer</a>
 
