--- a/EasyBank/Views/Shared/_Layout.cshtml
+++ b/EasyBank/Views/Shared/_Layout.cshtml
@@ -36,19 +36,19 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>@ViewBag.Title - Easy Bank</title>
-        <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <meta name="viewport" content="width=device-width" />
-        <script src="~/Scripts/jquery-1.8.2.js"></script>
-        <script type="text/javascript" src="~/Scripts/script.js"></script>
-        @Styles.Render("~/Content/css")
-        @Scripts.Render("~/bundles/modernizr")
-    </head>
-    <body>
-        <header>
-                    @using (Html.BeginForm("ChangeCulture", "Home", FormMethod.Post, new {name = "langForm" }))
+<head>
+    <meta charset="utf-8" />
+    <title>@ViewBag.Title - Easy Bank</title>
+    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <meta name="viewport" content="width=device-width" />
+    <script src="~/Scripts/jquery-1.8.2.js"></script>
+    <script type="text/javascript" src="~/Scripts/script.js"></script>
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+</head>
+<body>
+    <header>
+        @*   @using (Html.BeginForm("ChangeCulture", "Home", FormMethod.Post, new {name = "langForm" }))
         {
             <select id="langSelect" name="lang">
                 <option disabled selected>@Resources.Resource.ChooseLang</option>
@@ -57,76 +57,82 @@
                 <option value="en">English</option>
             </select>
         }
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("Easy Bank", "Index", "Home")</p>
-                </div>
-                <div class="float-right">
-                    <section id="login">
-                        @Html.Partial("_LoginPartial")
-                    </section> 
-                    <nav>
-                        <ul id="menu">
-                                
-                                <li>@Html.ActionLink(Resources.Resource.Home, "Index", "Home")</li>
-                            @if (User.IsInRole("Client"))
-                            {
-                                @*<li>@Html.ActionLink(@Resources.Resource.Details, "ClientsProfile", "Protected", new {clientId = WebSecurity.GetUserId(User.Identity.Name) })</li>*@
-                            @*<li>@Html.ActionLink(@Resources.Resource.Details, "ClientsProfile", "Protected")</li>*@
-                            @* <li>@Html.ActionLink(@Resources.Resource.Details, "ClientsProfile", "Account", new { clientId = WebSecurity.GetUserId(User.Identity.Name) }, htmlAttributes: new { clientId = WebSecurity.GetUserId(User.Identity.Name) })</li>*@
-                                @Html.ActionLink(@Resources.Resource.Details, "ClientsProfile", "Account", new { id = WebSecurity.CurrentUserId}, null)
-                            
-                            }
-                            @if (User.IsInRole("Operator"))
-                            {
-                                <li>@Html.ActionLink(Resources.Resource.ClientsList, "ClientsList", "Protected")</li>
-                            }                       
-                            @if (User.IsInRole("Administrator"))
-                            {
-                                <li>@Html.ActionLink(Resources.Resource.Currencies, "CurrencyList", "Protected")</li>
-                            }
-                            @if (User.IsInRole("Administrator"))
-                            {
-                                <li>@Html.ActionLink("Operators list","OperatorsList","Protected")</li>
-                            }
+            <a href="/Home/ChangeCulture?lang=uk-UA" name="lang">UA</a>
+            <a href="/Home/ChangeCulture?lang=en" name="lang">EN</a>
+            <a href="/Home/ChangeCulture?lang=ru" name="lang">RU</a>*@
+        <div class="content-wrapper">
+            <div class="float-left">
+                <a href="/Home/ChangeCulture?lang=uk-UA" name="lang">UA</a>
+                <a href="/Home/ChangeCulture?lang=en" name="lang">EN</a>
+                <a href="/Home/ChangeCulture?lang=ru" name="lang">RU</a>
+                <p class="site-title">@Html.ActionLink("Easy Bank", "Index", "Home")</p>
+            </div>
+            <div class="float-right">
+                <section id="login">
+                    @Html.Partial("_LoginPartial")
+                </section>
+                <nav>
+                    <ul id="menu">
 
-                            @if (User.IsInRole("Administrator"))
-                            {
-                                <li>@Html.ActionLink("Register Operator","RegisterOperator", "Account")</li>
-                            }
-                            
-                            @if (User.IsInRole("Administrator"))
-                            {
-                                <li>@Html.ActionLink("Bank Products","DepositList","Office")</li>
-                            }
-                            @if (User.IsInRole("Administrator"))
-                            {
-                                <li>@Html.ActionLink("Financial Reports","TotalDepositedAmount","Operation")</li>
-                            }
+
+                        @if (User.IsInRole("Client"))
+                        {
+@*<li>@Html.ActionLink(@Resources.Resource.Details, "ClientsProfile", "Protected", new {clientId = WebSecurity.GetUserId(User.Identity.Name) })</li>*@
+@*<li>@Html.ActionLink(@Resources.Resource.Details, "ClientsProfile", "Protected")</li>*@
+@* <li>@Html.ActionLink(@Resources.Resource.Details, "ClientsProfile", "Account", new { clientId = WebSecurity.GetUserId(User.Identity.Name) }, htmlAttributes: new { clientId = WebSecurity.GetUserId(User.Identity.Name) })</li>*@
+                            <li>@Html.ActionLink(Resources.Resource.Home, "Index", "Home")</li>
+                            <li>@Html.ActionLink(@Resources.Resource.Details, "ClientsProfile", "Account", new { id = WebSecurity.CurrentUserId }, null)</li>
+                        }
+                        @if (User.IsInRole("Operator"))
+                        {
+                            <li>@Html.ActionLink(Resources.Resource.ClientsList, "ClientsList", "Protected")</li>
+                        }
+                        @if (User.IsInRole("Administrator"))
+                        {
+                            <li>@Html.ActionLink(Resources.Resource.Currencies, "CurrencyList", "Protected")</li>
+                        }
+                        @if (User.IsInRole("Administrator"))
+                        {
+                            <li>@Html.ActionLink("Operators list", "OperatorsList", "Protected")</li>
+                        }
+
+                        @if (User.IsInRole("Administrator"))
+                        {
+                            <li>@Html.ActionLink("Register Operator", "RegisterOperator", "Account")</li>
+                        }
+
+                        @if (User.IsInRole("Administrator"))
+                        {
+                            <li>@Html.ActionLink("Bank Products", "DepositList", "Office")</li>
+                        }
+                        @if (User.IsInRole("Administrator"))
+                        {
+                            <li>@Html.ActionLink("Financial Reports", "TotalDepositedAmount", "Operation")</li>
+                        }
                                     
 
-                           @*<li>@Html.ActionLink("RegisterAdmin","RegisterAdmin","Account")</li>*@
-                        </ul>
-                    </nav>
-                </div>
+@*<li>@Html.ActionLink("RegisterAdmin","RegisterAdmin","Account")</li>*@
+                    </ul>
+                </nav>
             </div>
-        </header>
-        <div id="body">
-            @RenderSection("featured", required: false)
-            <section class="content-wrapper main-content clear-fix">
-                @RenderBody()
-            </section>
         </div>
-        <footer>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - Easy Bank</p>
-                </div>
+    </header>
+    <div id="body">
+        @RenderSection("featured", required: false)
+        <section class="content-wrapper main-content clear-fix">
+            @RenderBody()
+        </section>
+    </div>
+    <footer>
+        <div class="content-wrapper">
+            <div class="float-left">
+                <p>&copy; @DateTime.Now.Year - Easy Bank</p>
             </div>
-        </footer>
+        </div>
+    </footer>
 
-        @Scripts.Render("~/bundles/jquery")
-        @RenderSection("scripts", required: false)
-    </body>
+    @Scripts.Render("~/bundles/jquery")
+    @RenderSection("scripts", required: false)
+</body>
 </html>
 
