--- a/EasyBank/Views/Protected/Index.cshtml
+++ b/EasyBank/Views/Protected/Index.cshtml
@@ -1,1 +1,15 @@
-﻿This is index
+﻿@model EasyBank.Models.ErrorReport
+This is index
+
+
+@foreach (var errorreport in ViewBag.ErrorReports)
+{   <section class="contact">
+        <header>
+
+            <h3>@errorreport.Text</h3>
+        </header>
+        <p>
+            Posted by @errorreport.ReportDate.ToLongDateString()
+        </p>
+    </section>
+}
