--- a/EasyBank/Views/Account/Login.cshtml
+++ b/EasyBank/Views/Account/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@model EasyBank.Models.LoginModel
+﻿@using CaptchaMvc.HtmlHelpers
+@model EasyBank.Models.LoginModel
 
 @{
     ViewBag.Title = "Log in for clients";
@@ -7,6 +8,9 @@
 <hgroup class="title">
     <h1>@ViewBag.Title.</h1>
 </hgroup>
+
+
+
 
 <section id="loginForm">
 <h3>Use your credentials to enter the system.</h3>
@@ -31,6 +35,11 @@
                 @Html.CheckBoxFor(m => m.RememberMe)
                 @Html.LabelFor(m => m.RememberMe, new { @class = "checkbox" })
             </li>
+            <li>
+                @*Capcha symbols amount*@
+                @Html.Captcha("Refresh", "Type the symbols", 4, "Wrong capcha input")
+            </li>
+
         </ol>
         @ViewBag.Message
         <br />
@@ -38,6 +47,9 @@
     </fieldset>
 }
 </section>
+
+
+
 
 <section class="social" id="socialLoginForm">
     <h2>Welcome to Easy Bank online service!</h2>
