Added Profit Calc and Minor Fixes

--- a/EasyBank/Views/Operation/TotalDepositedAmount.cshtml
+++ b/EasyBank/Views/Operation/TotalDepositedAmount.cshtml
@@ -2,6 +2,10 @@
 
 @Html.DisplayFor(model => Model)
 
-<br/>
+<br />
 
 @Html.Action("TotalCreditedAmount")
+@Html.Action("TotalDepositInterests")
+@Html.Action("TotalCreditInterests")
+
+@Html.Action("ProfitCalc")n("TotalCreditedAmount")
