--- a/EasyBank/Views/Account/ShowClientPhoto.cshtml
+++ b/EasyBank/Views/Account/ShowClientPhoto.cshtml
@@ -2,7 +2,7 @@
 <h2>@Resources.Resource.ClientsPhotoTitle</h2>
 
 @{
-    ViewBag.Title = "Clients passport";
+    ViewBag.Title = @Resources.Resource.ClientsPhotoTitle;
 }
 
 @if (Model == null )
