--- a/EasyBank/Views/Account/ClientsProfile.cshtml
+++ b/EasyBank/Views/Account/ClientsProfile.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EasyBank.Models.Client
 
 @{
-    ViewBag.Title = "Clients profile";
+    ViewBag.Title = @Resources.Resource.ClientsProfile;
 }
 
 <h2>@Html.Label(@Resources.Resource.ClientsProfileTitle)</h2>
@@ -90,7 +90,7 @@
     }
     else
     {
-
+        <br />
         @Resources.Resource.AccountsAreAbsent
     }
     @foreach (var item in Model.Accounts)
